ros2_ws/log/build_2025-05-03_20-14-43/text_subscriber/stderr.log
/Users/bogdancprljakovic/ros2_ws/src/text_subscriber/src/subscriber_node.cpp:18:36: error: no member named 'id' in 'custom_msg_pkg::msg::TextStamped_<std::allocator<void>>'
   18 |             msg->text.c_str(),msg->id,msg_time.seconds(),current.seconds(),delay);
      |                               ~~~~~^
/opt/anaconda3/envs/ros2/include/rclcpp/rclcpp/logging.hpp:537:7: note: expanded from macro 'RCLCPP_INFO'
  537 |       __VA_ARGS__); \
      |       ^~~~~~~~~~~
/opt/anaconda3/envs/ros2/include/rcutils/rcutils/logging_macros.h:510:5: note: expanded from macro 'RCUTILS_LOG_INFO_NAMED'
  510 |     __VA_ARGS__)
      |     ^~~~~~~~~~~
/opt/anaconda3/envs/ros2/include/rcutils/rcutils/logging_macros.h:79:64: note: expanded from macro 'RCUTILS_LOG_COND_NAMED'
   79 |       rcutils_log(&__rcutils_logging_location, severity, name, __VA_ARGS__); \
      |                                                                ^~~~~~~~~~~
In file included from /Users/bogdancprljakovic/ros2_ws/src/text_subscriber/src/subscriber_node.cpp:1:
In file included from /opt/anaconda3/envs/ros2/include/rclcpp/rclcpp/rclcpp.hpp:155:
In file included from /opt/anaconda3/envs/ros2/include/rclcpp/rclcpp/executors.hpp:21:
In file included from /opt/anaconda3/envs/ros2/include/rclcpp/rclcpp/executors/multi_threaded_executor.hpp:25:
In file included from /opt/anaconda3/envs/ros2/include/rclcpp/rclcpp/executor.hpp:37:
In file included from /opt/anaconda3/envs/ros2/include/rclcpp/rclcpp/executor_options.hpp:20:
In file included from /opt/anaconda3/envs/ros2/include/rclcpp/rclcpp/memory_strategies.hpp:18:
In file included from /opt/anaconda3/envs/ros2/include/rclcpp/rclcpp/memory_strategy.hpp:25:
In file included from /opt/anaconda3/envs/ros2/include/rclcpp/rclcpp/any_executable.hpp:20:
In file included from /opt/anaconda3/envs/ros2/include/rclcpp/rclcpp/callback_group.hpp:29:
In file included from /opt/anaconda3/envs/ros2/include/rclcpp/rclcpp/subscription_base.hpp:32:
/opt/anaconda3/envs/ros2/include/rclcpp/rclcpp/any_subscription_callback.hpp:391:7: warning: 'set_deprecated<custom_msg_pkg::msg::TextStamped_<std::allocator<void>>>' is deprecated: use 'void(std::shared_ptr<const MessageT>)' instead [-Wdeprecated-declarations]
  391 |       set_deprecated(static_cast<typename scbth::callback_type>(callback));
      |       ^
/opt/anaconda3/envs/ros2/include/rclcpp/rclcpp/subscription_factory.hpp:94:29: note: in instantiation of function template specialization 'rclcpp::AnySubscriptionCallback<custom_msg_pkg::msg::TextStamped_<std::allocator<void>>>::set<std::__bind<void (Subscriber::*)(std::shared_ptr<custom_msg_pkg::msg::TextStamped_<std::allocator<void>>>), Subscriber *, const std::placeholders::__ph<1> &>>' requested here
   94 |   any_subscription_callback.set(std::forward<CallbackT>(callback));
      |                             ^
/opt/anaconda3/envs/ros2/include/rclcpp/rclcpp/create_subscription.hpp:122:26: note: in instantiation of function template specialization 'rclcpp::create_subscription_factory<custom_msg_pkg::msg::TextStamped_<std::allocator<void>>, std::__bind<void (Subscriber::*)(std::shared_ptr<custom_msg_pkg::msg::TextStamped_<std::allocator<void>>>), Subscriber *, const std::placeholders::__ph<1> &>, std::allocator<void>, rclcpp::Subscription<custom_msg_pkg::msg::TextStamped_<std::allocator<void>>>, rclcpp::message_memory_strategy::MessageMemoryStrategy<custom_msg_pkg::msg::TextStamped_<std::allocator<void>>>, custom_msg_pkg::msg::TextStamped_<std::allocator<void>>>' requested here
  122 |   auto factory = rclcpp::create_subscription_factory<MessageT>(
      |                          ^
/opt/anaconda3/envs/ros2/include/rclcpp/rclcpp/create_subscription.hpp:190:26: note: in instantiation of function template specialization 'rclcpp::detail::create_subscription<custom_msg_pkg::msg::TextStamped_<std::allocator<void>>, std::__bind<void (Subscriber::*)(std::shared_ptr<custom_msg_pkg::msg::TextStamped_<std::allocator<void>>>), Subscriber *, const std::placeholders::__ph<1> &>, std::allocator<void>, rclcpp::Subscription<custom_msg_pkg::msg::TextStamped_<std::allocator<void>>>, rclcpp::message_memory_strategy::MessageMemoryStrategy<custom_msg_pkg::msg::TextStamped_<std::allocator<void>>>, rclcpp::Node, rclcpp::Node, custom_msg_pkg::msg::TextStamped_<std::allocator<void>>>' requested here
  190 |   return rclcpp::detail::create_subscription<
      |                          ^
/opt/anaconda3/envs/ros2/include/rclcpp/rclcpp/node_impl.hpp:99:18: note: in instantiation of function template specialization 'rclcpp::create_subscription<custom_msg_pkg::msg::TextStamped_<std::allocator<void>>, std::__bind<void (Subscriber::*)(std::shared_ptr<custom_msg_pkg::msg::TextStamped_<std::allocator<void>>>), Subscriber *, const std::placeholders::__ph<1> &>, std::allocator<void>, rclcpp::Subscription<custom_msg_pkg::msg::TextStamped_<std::allocator<void>>>, rclcpp::message_memory_strategy::MessageMemoryStrategy<custom_msg_pkg::msg::TextStamped_<std::allocator<void>>>, rclcpp::Node>' requested here
   99 |   return rclcpp::create_subscription<MessageT>(
      |                  ^
/Users/bogdancprljakovic/ros2_ws/src/text_subscriber/src/subscriber_node.cpp:27:33: note: in instantiation of function template specialization 'rclcpp::Node::create_subscription<custom_msg_pkg::msg::TextStamped_<std::allocator<void>>, std::__bind<void (Subscriber::*)(std::shared_ptr<custom_msg_pkg::msg::TextStamped_<std::allocator<void>>>), Subscriber *, const std::placeholders::__ph<1> &>, std::allocator<void>, rclcpp::Subscription<custom_msg_pkg::msg::TextStamped_<std::allocator<void>>>, rclcpp::message_memory_strategy::MessageMemoryStrategy<custom_msg_pkg::msg::TextStamped_<std::allocator<void>>>>' requested here
   27 |             subscription_=this->create_subscription<custom_msg_pkg::msg::TextStamped>("TextStamped",10,
      |                                 ^
/opt/anaconda3/envs/ros2/include/rclcpp/rclcpp/any_subscription_callback.hpp:405:5: note: 'set_deprecated<custom_msg_pkg::msg::TextStamped_<std::allocator<void>>>' has been explicitly marked deprecated here
  405 |   [[deprecated("use 'void(std::shared_ptr<const MessageT>)' instead")]]
      |     ^
1 warning and 1 error generated.
make[2]: *** [CMakeFiles/subscriber_node.dir/build.make:79: CMakeFiles/subscriber_node.dir/src/subscriber_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:153: CMakeFiles/subscriber_node.dir/all] Error 2
make: *** [Makefile:146: all] Error 2
